--- a/style/header.css
+++ b/style/header.css
@@ -5,13 +5,36 @@
 
 .page-header__logo {
   height: 85px;
+  text-align: center;
+}
+
+.page-header__logo img {
+  width: 226px;
+  height: 30px;
+
 }
 
 @media (min-width: 768px) {
 
+.page-header {
+  background-color: #000000;
+}
+
 .page-header__logo {
   order: 2;
+
   height: 400px;
+  width: 100%;
+
+  background: #000000 url("../img/bg-header.jpg") center -9px no-repeat;
+}
+
+.page-header__logo img {
+  display: block;
+  width: 370px;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 40px;
 }
 
 }
@@ -20,8 +43,13 @@
 
 .page-header__logo {
   height: 648px;
+
+  background-position: center 0;
+  background-size: cover;
 }
 
-
+.page-header__logo img {
+  margin-top: 57px;
+}
 
 }
