--- a/style/site-list.css
+++ b/style/site-list.css
@@ -47,6 +47,17 @@
   text-align: center;
 }
 
+.main-nav--nojs .site-list__item {
+  display: block;
+}
+
+.main-nav--closed .site-list__item--active a {
+  padding-right: 21px;
+  padding-left: 21px;
+
+  text-align: left;
+}
+
 }
 
 @media (min-width: 768px) {
