--- a/style/site-list.css
+++ b/style/site-list.css
@@ -63,7 +63,60 @@
 @media (min-width: 768px) {
 
 .site-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+
   width: 570px;
+}
+
+.site-list__item {
+  margin-right: 32px;
+}
+
+.site-list__item:last-child {
+  margin-right: 0;
+}
+
+.site-list__item a {
+  padding: 0;
+  padding-top: 25px;
+  padding-bottom: 23px;
+
+  background: none;
+  border: none;
+
+  font-size: 12px;
+}
+
+.site-list__item a[href]:hover {
+  color: #826550;
+
+  background-color: #000000;
+}
+
+.site-list__item a[href]:active {
+  color: #ffffff;
+
+  background-color: #000000;
+  opacity: 0.3;
+}
+
+.site-list__item--active {
+  position: relative;
+}
+
+.site-list__item--active::after {
+  content: "";
+
+  position: absolute;
+  right: 0;
+  bottom: -3px;
+  left: 0;
+
+  height: 3px;
+
+  background-color: #826550;
 }
 
 }
@@ -71,7 +124,36 @@
 @media (min-width: 1200px) {
 
 .site-list {
-  width: 680px;
+  width: 800px;
+}
+
+.site-list__item {
+  margin-right: 0;
+}
+
+.site-list__item--active::after {
+  right: 30px;
+  left: 30px;
+}
+
+.site-list__item a {
+  padding-right: 31px;
+  padding-left: 31px;
+
+  font-size: 14px;
+}
+
+.site-list__item a[href]:hover {
+  color: #000000;
+
+  background-color: #ffffff;
+}
+
+.site-list__item a[href]:active {
+  color: rgba(0, 0, 0, 0.3);
+
+  background-color: #ffffff;
+  opacity: 1;
 }
 
 }
