--- a/style/user-list.css
+++ b/style/user-list.css
@@ -45,12 +45,85 @@
   width: 60px;
 }
 
+.user-list__login {
+  width: 60px;
+  height: 70px;
+  padding: 0;
+
+  font-size: 0;
+}
+
+.user-list__login-icon {
+  top: 29px;
+  left: 12px;
+}
+
+.user-list__login:hover .user-list__login-icon {
+  opacity: 1;
+}
+
+.user-list__login:hover .user-list__login-icon polygon {
+  fill: #826550;
+}
+
+.user-list__login:active .user-list__login-icon {
+  opacity: 0.3;
+}
+
+.user-list__login:active .user-list__login-icon polygon {
+  fill: #ffffff;
+}
+
 }
 
 @media (min-width: 1200px) {
 
 .user-list {
-  width: 160px;
+  width: auto;
+  max-width: 160px;
+}
+
+.user-list__login {
+  position: relative;
+
+  width: auto;
+  height: auto;
+  padding: 25px 30px 23px 50px;
+
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.user-list__login:hover {
+  color: #000000;
+
+  background-color: #ffffff;
+}
+
+.user-list__login:active {
+  color: rgba(0, 0, 0, 0.3);
+
+  background-color: #ffffff;
+}
+
+.user-list__login:hover .user-list__login-icon {
+  opacity: 0.3;
+}
+
+.user-list__login:hover .user-list__login-icon polygon {
+  fill: #000000;
+}
+
+
+.user-list__login:active .user-list__login-icon {
+  opacity: 0.1;
+}
+
+.user-list__login-icon {
+  left: 15px;
 }
 
 }
