--- a/style/main-nav.css
+++ b/style/main-nav.css
@@ -1,9 +1,9 @@
 .main-nav {
   position: relative;
 
-  width: 320px;
+  width: auto;
   min-height: 51px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
 
   background-color: #826550;
 }
@@ -143,7 +143,8 @@
 .main-nav__wrapper {
   display: flex;
   justify-content: space-between;
-  width: 640px;
+  width: 84%;
+  max-width: 960px;
   margin: 0 auto;
 }
 
@@ -156,7 +157,7 @@
 @media (min-width: 1200px) {
 
 .main-nav__wrapper {
-  width: 960px;
+  /* width: 960px; */
 }
 
 }
