--- a/style/stats.css
+++ b/style/stats.css
@@ -1,5 +1,5 @@
 .stats {
-  width: 320px;
+  width: auto;
   margin: 0 auto;
 }
 
@@ -114,7 +114,9 @@
 @media (min-width: 768px) {
 
 .stats {
-  width: 640px;
+  width: 84%;
+  max-width: 960px;
+  margin: 0 auto;
   margin-top: -185px;
 }
 
@@ -141,7 +143,7 @@
 }
 
 .stats__slogan {
-  width: 240px;
+  width: 50%;
   margin-bottom: 18px;
 
   font-size: 40px;
@@ -151,16 +153,17 @@
 }
 
 .stats__intro {
-  width: 210px;
+  width: 37.5%;
   margin-top: 5px;
-  padding-right: 37px;
+  padding: 0;
+  padding-left: 30px;
 
   text-align: left;
 }
 
 .stats__legend--top {
   display: block;
-  width: 240px;
+  width: 50%;
 
   color: rgba(0, 0, 0, 0.3);
 }
@@ -179,7 +182,8 @@
 }
 
 .stats__list tr {
-  width: 250px;
+  width: 50%;
+  box-sizing: border-box;
   padding: 25px 35px;
   padding-bottom: 28px;
 }
@@ -219,7 +223,8 @@
 }
 
 .stats__header {
-  display: block;
+  /* display: block; */
+  flex-direction: column;
 
   width: 240px;
   flex-shrink: 0;
@@ -238,10 +243,12 @@
   width: auto;
   padding-right: 30px;
   margin-bottom: 32px;
+  padding-left: 0;
 }
 
 .stats__legend--top {
   width: auto;
+  margin-top: auto;
 }
 
 .stats__list {
