--- a/style/main.css
+++ b/style/main.css
@@ -3,6 +3,7 @@
 @import url("site-list.css");
 @import url("user-list.css");
 @import url("stats.css");
+@import url("adventages.css");
 
 @font-face {
   font-weight: normal;
