--- a/style/main.css
+++ b/style/main.css
@@ -4,6 +4,7 @@
 @import url("user-list.css");
 @import url("stats.css");
 @import url("adventages.css");
+@import url("slider.css");
 
 @font-face {
   font-weight: normal;
